--- a/crowdsourcing/sample.html
+++ b/crowdsourcing/sample.html
@@ -482,7 +482,7 @@
 </div>
 
 
-<div class="ratings cml_field horizontal"><h2 class="legend">[1 / 2] John Patrick Hamilton &nbsp;&nbsp;&nbsp; <b><font color="red">award received</font></b> &nbsp;&nbsp;&nbsp; VC</h2>
+<div class="ratings cml_field horizontal"><h2 class="legend">[1 / 2] John Patrick Hamilton &nbsp;&nbsp;&nbsp; <b><font color="red">award received</font></b> &nbsp;&nbsp;&nbsp; Victoria Cross</h2>
 <div class="cml_row">
 <table>
   <thead>
